# suapcp

./: .gitignore  CLAUDE.md  LICENSE  Makefile  README.md  app.py  database.py  main_window.py  pyproject.toml  report_generator.py  requirements.txt  scan_window.py  setup.iss
.github/workflows/: build-linux.yml  build-windows.yml
make/: setup.sh  test.sh
tests/: test_database.py
